# pyvault

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyvault/: EncryptedVault.py  __init__.py  cli.py  container.py  crypto.py  decorators.py  settings.py  thumbnail.py  utils.py  vault.py
src/pyvault/gui/: __init__.py  app.py  main_window.py  workers.py
src/pyvault/gui/dialogs/: __init__.py  password_dialog.py
src/pyvault/gui/styles/: __init__.py  theme.py
src/pyvault/gui/widgets/: __init__.py  file_card.py  file_grid.py  search_bar.py  toolbar.py
