[project]
name = "pyvault"
version = "0.1.1"
description = "File encryption app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "cryptography==43.0.1",
    "maskpass==0.3.7",
]

[project.scripts]
vault = "pyvault:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
