[project]
name = "pyvault"
version = "0.2.0"
description = "File encryption app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beaupy>=3.10.1",
    "click>=8.1.8",
    "cryptography==43.0.1",
    "maskpass==0.3.7",
    "toml>=0.10.2",
]

[project.scripts]
vault = "pyvault.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
