[project]
name = "pyvault"
version = "0.3.1"
description = "File encryption app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beaupy>=3.10.1",
    "click>=8.1.8",
    "cryptography==43.0.1",
    "maskpass==0.3.7",
    "Pillow>=10.0.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.6.0"]

[project.scripts]
vault = "pyvault.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
